@@ -122,3 +122,5 @@ cpx: cotan ?
 stc: union,enum
 frc: lcm 
 str: icompare naar config
+
+fce: config.fs/make.fs naar cvs
