@@ -25,3 +25,6 @@ dnl.fs:  99372
 dcl.fs:
 dni.fs: 102356 
 dci.fs: 102428
+
+
+fina: CompileSize=80186 CompileTime=10714 msec TestTime=24450 msec (without floats)
